# sw_mikey_sakke

./: .clang-format  CMakeLists.txt  CMakePresets.json  FOS.md  LICENCE  README.md  StreamwideTestVectors.md
FOSS/: FOSS.md  MODIFICATIONS.md  NOTICE.md  SOURCE_OFFER.md
cmake_tools/: sw_mikey_sakke_standalone.cmake  versions.cmake
kms-agent/: CMakeLists.txt  README.md  cmake_tools
kms-agent/include/: KMClient.h  KMSResponseParser.h
kms-agent/src/: KMClient.cc  KMSResponseParser.cc  main.cc
kms-agent/unit_tests/: CMakeLists.txt  schema.xsd  test_init_response.xml  test_key_prov_response.xml
libmcrypto/include/libmcrypto/: aes.h  base64.h  config.h  hmac.h  rand.h  rijndael-alg-fst.h
libmcrypto/source/: aes.cc  base64.cc  rand.cc  rijndael-alg-fst.cc
libmcrypto/source/openssl/: aes.cc  hmac.cc
libmcrypto/source/openssl3/: hmac.cc
libmikey-sakke/: .gitignore  PATENTS
libmikey-sakke/include/: c_casts.h  mikey_sakke_types.h  mikeysakke4c.h  mikeysakkelog4c.h  test_data.h
libmikey-sakke/include/mscrypto/: eccsi.h  parameter-set.h  random.h  sakke.h
libmikey-sakke/include/mscrypto/ecc/: curve.h  fwd.h  point.h
libmikey-sakke/include/mscrypto/hash/: sha256.h
libmikey-sakke/include/mskms/: client-fwd.h  key-storage.alternative.h  key-storage.h  runtime-key-storage.inl
libmikey-sakke/include/util/: bigint-ssl.h  bigint.h  mcdata-crypto.h  octet-string.h  printable.inl  time-measure.h
libmikey-sakke/src/: mikeysakke4c.cc  mikeysakkelog4c.cc  test_data.cc
libmikey-sakke/src/mscrypto/: eccsi.cc  parameter-set-ossl.cc  parameter-set.cc  sakke-ossl.cc  sakke.cc
libmikey-sakke/src/mscrypto/ecc/: curve-gmp.cc  curve-openssl.cc
libmikey-sakke/src/mscrypto/hash/openssl/: sha256.cc
libmikey-sakke/src/mscrypto/hash/openssl3/: sha256.cc
libmikey-sakke/src/util/: bigint-ssl.cc  bigint.cc  mcdata-crypto.cc  octet-string.cc  time-measure.cc
libmikey/include/libmikey/: KeyAgreement.h  KeyAgreementSAKKE.h  KeyValidity.h  Mikey.h  MikeyCsIdMap.h  MikeyDefs.h  MikeyException.h  MikeyKeyParameters.h  MikeyMcDataProtected.h  MikeyMessage.h  MikeyPayload.h  MikeyPayloadCHASH.h  MikeyPayloadDH.h  MikeyPayloadERR.h  MikeyPayloadGeneralExtension.h  MikeyPayloadHDR.h  MikeyPayloadID.h  MikeyPayloadKEMAC.h  MikeyPayloadKeyData.h  MikeyPayloadPKE.h  MikeyPayloadRAND.h  MikeyPayloadSAKKE.h  MikeyPayloadSIGN.h  MikeyPayloadSP.h  MikeyPayloadT.h  MikeyPayloadV.h  exception.h  libmikey_config.h
libmikey/keyagreement/: KeyAgreement.cc  KeyAgreementSAKKE.cc  KeyValidity.cc
libmikey/mikey/: Mikey.cc  MikeyCsIdMap.cc  MikeyException.cc  MikeyKeyParameters.cc  MikeyMcDataProtected.cc  MikeyMessage.cc  MikeyMessageSAKKE.h  MikeyPayload.cc  MikeyPayloadCHASH.cc  MikeyPayloadDH.cc  MikeyPayloadERR.cc  MikeyPayloadGeneralExtension.cc  MikeyPayloadHDR.cc  MikeyPayloadID.cc  MikeyPayloadKEMAC.cc  MikeyPayloadKeyData.cc  MikeyPayloadPKE.cc  MikeyPayloadRAND.cc  MikeyPayloadSIGN.cc  MikeyPayloadSP.cc  MikeyPayloadT.cc  MikeyPayloadV.cc
libmutil/include/libmutil/: CacheItem.h  Exception.h  Logger.h  MemObject.h  Timestamp.h  config.h  libmutil_config.h  mtime.h  mtypes.h  stringutils.h  versions.h
libmutil/source/: CacheItem.cc  Exception.cc  Logger.cc  MemObject.cc  Timestamp.cc  stringutils.cc
unit_tests/: .gitignore  CMakeLists.txt  imessage_gen.cc  keygen.cc  keymaterials.h  test_eccsi.cc  test_guk.cc  test_i_message.cc  test_i_message_infer_key_period_no.cc  test_init_response_parse.cc  test_key_deriv.cc  test_keyprov_response_parse.cc  test_mcdata_crypto.cc  test_sakke.cc  test_uid_format2.cc  test_vectors.cc
